sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: ')' expected but ';' found.
		swapped = false;
                               ^AlgBubbleSort1:7: error: illegal start of statement
	)
        ^