sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var swapped = true;
	while ( swapped == true )  
	(
		swapped = false;
	)
	

}

